# NodeRenderer

./: .gitmodules  CMakeLists.txt
examples/: colours.b64  simple.b64  wave.b64
glad/include/glad/: glad.h
glad/src/: glad.c
ico/: icon.rc
res/image/: res.h  resources.rc
src/: main.cpp
src/config/: version.h.in
src/log/: logger.cpp  logger.h
src/math/: comb.inl  kdtree.inl  vector.cpp  vector.h
src/python/: loader.cpp  loader.h
src/python/scripts/: beat_analyzer.py  points_display.py
src/render/: node_outputs.h  raster_renderer.cpp  raster_renderer.h  raymarch_renderer.cpp  raymarch_renderer.h  renderer.cpp  renderer.h
src/render/nodes/: audio_node.h  camera_node.h  color_node.h  display_node.h  feedback_node.h  func_node.h  hist_node.h  list_access_node.h  list_join_node.h  list_node.h  math_node.h  mesh_interp_node.h  mesh_node.h  node.h  nodedef.h  path_node.h  render_node.h  shader_node.h  test_node.h  time_node.h  value_node.h  vector_node.h  worldpos_node.h
src/shader/: fogpart.fs  fogpart.vs  fragment.fs  fragment.glsl  normal_pass.fs  normal_pass.vs  sobel_filter.fs  sobel_filter.vs  vertex.glsl  vertex.vs
src/shader/raymarch/: compute.cs.template  fragment.fs
src/util/: audio.cpp  audio.h  base64.cpp  base64.h  imgui_ext.inl  misc.inl  objloader.cpp  objloader.h  perlin.inl  serialization.inl  updateclient.cpp  updateclient.h
src/util/raycaster/: bvh.cpp  bvh.h  raycaster.inl
src/windows/: analytics_window.cpp  analytics_window.h  node_window.cpp  node_window.h  options_window.cpp  options_window.h  update_window.cpp  update_window.h  window.cpp  window.inl  window_manager.inl
